--- a/src/app/features/products/components/variant-value-details/variant-value-details.component.html
+++ b/src/app/features/products/components/variant-value-details/variant-value-details.component.html
@@ -130,7 +130,7 @@
           <h6 class="pb-3 border-bottom">{{'Quantity' | translate}}</h6>
           <div class="d-flex align-items-center justify-content-between">
             <span>{{'Product Quantity' | translate}}</span>
-              <app-quantity-control [quantity]="quantity" (quantityChange)="updateQuantity($event)">
+              <app-quantity-control [quantity]="VariantValueDetailsComponentData.quantity" (quantityChange)="updateQuantity($event)">
             </app-quantity-control>
           </div>
         </div>
