--- a/src/app/features/orders/shared/client-info/client-info.component.html
+++ b/src/app/features/orders/shared/client-info/client-info.component.html
@@ -1,4 +1,4 @@
-  <div class="d-flex align-items-center" [class.flex-grow-1]="flexGrow">
+  <div class="d-flex align-items-center" [class.flex-grow-1]="ClientInfoData.flexGrow">
                 <span class="px-3">
                     <img [src]="'assets/images/'+personImage"   alt="customer image" width="40px;" height="40px" class="rounded rounded-circle ">
                 </span>
@@ -9,7 +9,7 @@
                       }}
                     </span>
                     <div class="d-flex align-items-center">
-                          <span class="pe-2 fs-verySmall text-secondary">{{additionalInfo}}</span>
+                          <span class="pe-2 fs-verySmall text-secondary">{{ClientInfoData.additionalInfo}}</span>
                             <ng-content></ng-content>
                         </div>
                   </div>
