--- a/src/app/features/orders/order/order.component.html
+++ b/src/app/features/orders/order/order.component.html
@@ -1,4 +1,8 @@
 <app-order-details
-[order]="order"
-[selectedCustomer]="selectedCustomer">
+ [OrderDetailsData] = "{
+  order: order,
+  selectedCustomer:selectedCustomer
+}">
 </app-order-details>
+
+
