update component to use single input

--- a/src/app/features/orders/shared/home-payment/home-payment.component.html
+++ b/src/app/features/orders/shared/home-payment/home-payment.component.html
@@ -71,11 +71,14 @@
 
        <div class="col-12">
         <app-payment-buttons
-         [order]="order"
-         [inputMap]="inputMap"
+        [PaymentButtonsData] ="{
+        getPaidAmount:getPaidAmount.bind(this),
+        inputMap: inputMap,
+        order: order,
+      }"
         (mustBePaid)="setMustbePaid($event)"
         (clearCustomer)="clearCustomerFn()"
-        [getPaidAmount]="getPaidAmount.bind(this)"></app-payment-buttons>
+        ></app-payment-buttons>
       </div>
     </div>
   </div>
